compiler/tests/fail/function_redefinition.frx
void func()
{

}

i32 func(i32 x)
{

}

i32 main()
{
    return -1;
}
